# dronesim

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  STM32H743ZITx_FLASH.ld  drone_gui.py  fft.py  imutest.py  mpureader.py  radio_reader.py
DroneController/: CMakeLists.txt
DroneController/src/: DroneController.cpp  DroneController.h  MotorDriver.h  PID.cpp  PID.h  SensorReader.h  algebra.cpp  algebra.h
DroneFirmware/: .mxproject  CMakeLists.txt  DroneFirmware.ioc  Makefile  STM32F411CEUx_FLASH.ld  STM32H743ZITx_FLASH.ld
DroneFirmware/Core/Inc/: AHRS.h  FreeRTOSConfig.h  MPU6050Driver.h  bme_interface.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
DroneFirmware/Core/Src/: AHRS.cpp  MPU6050Driver.cpp  main.cpp  mpu_helpers.c  mpu_interface.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  vl53l0x_platform.c
DroneFirmware/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1/: port.c
DroneFirmware/GYNEO/: gyneo_gps_driver.c  gyneo_gps_driver.h
DroneFirmware/HCSR04/: hcsr04_core.c  hcsr04_core.h  hcsr04_platform_stm32.c
DroneFirmware/Inc/: AHRS.h  BLDCController.h  MotorDriverMock.h  bme_interface.h  comm_manager.h  i2c_helpers.h  main.h  mpu_helpers.h  mpu_interface.h  stm32f4xx_it.h  vl53l0x_platform_log.h
DroneFirmware/MPU/driver/eMPL/: inv_mpu.c  inv_mpu_dmp_motion_driver.c
DroneFirmware/NRF/: nRF24.c  nRF24.h  nRF24_Defs.h
DroneFirmware/QMC/: qmc5883l.c  qmc5883l.h
DroneFirmware/Src/: AHRS.cpp  BLDCController.cpp  BLDCController.h  bme_interface.c  comm_manager.cpp  i2c_helpers.c  main.cpp  mpu_interface.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  vl53l0x_platform.c
DroneFirmware/madgwick/: MadgwickAHRS.c  MadgwickAHRS.h
DroneFirmware_old/: CMakeLists.txt  STM32H743ZITx_FLASH.ld
DroneFirmware_old/Core/Inc/: AHRS.h  FreeRTOSConfig.h  comm_manager.h  main.h  mpu_interface.h  stm32h7xx_it.h
DroneFirmware_old/Core/Src/: AHRS.cpp  bme_interface.c  main.cpp  mpu_interface.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
DroneFirmware_old/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1/: port.c
DroneFirmware_old/MPU/driver/eMPL/: inv_mpu.c  inv_mpu_dmp_motion_driver.c
DroneFirmware_old/NRF/: nRF24.c  nRF24.h
DroneFirmware_old/QMC/: qmc5883l.h
DroneSim/: CMakeLists.txt
DroneSim/src/: Drone.h  DroneModel.cpp  DroneModel.h  MainWindow.cpp  MainWindow.h  PIDPlot.cpp  PIDPlot.h  PIDSettings.cpp  PIDSettings.h  PIDWindow.cpp  PIDWindow.h  PlotWindow.cpp  PlotWindow.h  SensorReaderMock.h  main.cpp
Message/: CMakeLists.txt
Message/Inc/: message.h
Message/Src/: message.c
PIDTest/: CMakeLists.txt
PIDTest/src/: DroneVerticalModel.h  MainWindow.cpp  MainWindow.h  Model.h
Utilities/: CMakeLists.txt  algebra.cpp  algebra.h
crc16/: CMakeLists.txt  crc16.c  crc16.h
rf_remote/: .mxproject  CMakeLists.txt  Makefile  openocd.cfg  openocd.gdb  receiver.ioc
rf_remote/Core/Inc/: debouncer.h  lcd.h  main.h  queue.h  stm32f1xx_it.h
rf_remote/Core/Src/: debouncer.c  lcd.c  main.c  queue.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
rf_remote/NRF/: nRF24.c  nRF24.h  nRF24_Defs.h
src/: Drone.cpp  Drone.h  MainWindow.cpp  MainWindow.h  algebra.h
